Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     //define legend
     const legend = new gridviz.ColorDiscreteLegend({
-        title: 'Part d'artificialisation',
+        title: "Part d'artificialisation",
         width: 450,
         colors: () => classifier.colors,
         breaks: () => classifier.breaks,
@@ -115,3 +115,4 @@
 </body>
 
 </html>
+
