Change color scheme in grid visualization
Updated color scheme for the classifier in the grid visualization.

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         [1, 2, 4, 8, 16, 32, 64],
         //the colors, for each class
         [
-            'rgb(255, 255, 204)',
-            'rgb(255, 234, 154)',
-            'rgb(254, 205, 106)',
-            'rgb(254, 162, 70)',
-            'rgb(252, 105, 50)',
-            'rgb(233, 42, 33)',
-            'rgb(192, 6, 36)',
-            'rgb(128, 0, 38)',
+            '#1a9850',
+            '#66bd63',
+            '#a6d96a',
+            '#d9ef8b',
+            '#fee08b',
+            '#fdae61',
+            '#f46d43',
+            '#d73027',
         ]
     )
 
@@ -115,4 +115,5 @@
 </body>
 
 </html>
+
 
