Modify title and comments in index.html
Updated the title and comments in the HTML file.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Artificialisation - OCSGE 2021</title>
+    <title>Artificialisation - source : OCSGE 2021</title>
     <style>
         /* canvas {
             will-change: transform;
@@ -115,5 +115,6 @@
 </body>
 
 </html>
+
 
 
